# embers-diaries

./: .gitignore  LICENSE  README.md  gitignore  pyproject.toml  requirements.txt
embers/: __init__.py  db.py
embers/api/: __init__.py
embers/cognitive/: __init__.py  conflict.py  consolidation.py  decay.py  episodic.py  reflection.py
embers/core/: annotation.py  edge.py  record.py  types.py
embers/engine/: reader.py  wal.py  writer.py
embers/index/: __init__.py  fulltext.py  graph.py  master.py  timeline.py  vector.py
embers/integration/: __init__.py  context.py  embeddings.py  memory_protocol.py
embers/namespace/: __init__.py  manager.py
embers/query/: __init__.py  engine.py
embers/storage/: format.py  store.py
embers_diaries.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paper/: embers_diaries_paper.md
tests/: test_cognitive.py  test_indexes.py  test_integration.py  test_namespace_access.py  test_phase1.py
