[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embers-diaries"
version = "0.1.0"
description = "Ember's Diaries: A cognitive database engine for AI memory systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ticket", email = "ticketguy@gmail.com"}]

dependencies = [
    "msgpack>=1.0.8,<2.0.0",
]

[project.optional-dependencies]

# Vector similarity search (Phase 2)
vector = [
    "numpy>=1.26.0,<3.0.0",
]

# Full-text search (Phase 3)
fulltext = [
    "whoosh>=2.7.4",
]

# REST API (Phase 6)
api = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
]

# Everything
all = [
    "msgpack>=1.0.8,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    "whoosh>=2.7.4",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
]

# Dev / testing — never auto-installed
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["embers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]